--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "developers-portfolio",
   "description": "A personal static website/portfolio template hosted with GitHub Pages, built to showcase my recent projects.",
-  "homepage": "http://hashirshoaeb.com/home",
+  "homepage": "https://ManfredRichthofen.github.io",
   "version": "2.0.0",
   "private": true,
   "author": {
-    "name": "Hashir Shoaib",
-    "email": "hashirshoaeb@gmail.com",
-    "url": "https://github.com/hashirshoaeb"
+    "name": "Jacob Beckerle",
+    "email": "jacobbeckerle@gmail.com",
+    "url": "https://github.com/ManfredRichthofen"
   },
   "dependencies": {
     "axios": "^0.19.2",
